# rust-webapp-tutorial

./: .env  Cargo.toml  README.md  docker-compose.yml
axum-readme/: Cargo.toml  README.md
axum-readme/src/: main.rs
axum-templates/: Cargo.toml  README.md
axum-templates/src/: main.rs
axum-todos/: Cargo.toml  README.md
axum-twitter-clone/: README.md
axum-twitter-clone/src/controllers/: tweets.rs
src/: database.rs  lib.rs  main.rs
src/controllers/: root.rs
templates/: base.html  home.html
