[package]
name = "rustwi"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.11.1"
axum = "0.4"
serde = "1.0.147"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
bb8 = "0.7.1"
bb8-postgres = "0.7.0"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
